# academic-workflow-mcp

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: status.md
docs/architecture/: conventions.md  structure.md
tests/: test_connection.py  test_unit.py
workflow/: __init__.py  obsidian.py  templates.py  zotero.py
