[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-workflow-mcp"
version = "0.2.0"
description = "MCP server for AI-assisted academic literature reading: Zotero + Obsidian workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wuruiqi" }]
keywords = [
    "mcp", "zotero", "obsidian", "literature", "academic",
    "research", "workflow", "annotation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wuruiqi/academic-workflow-mcp"
Repository = "https://github.com/wuruiqi/academic-workflow-mcp"
Issues = "https://github.com/wuruiqi/academic-workflow-mcp/issues"

[project.scripts]
academic-workflow-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
packages = ["workflow"]

[tool.pytest.ini_options]
markers = [
    "integration: requires running Zotero and Obsidian, skipped in CI",
]
