[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zo-bridge"
version = "0.3.0"
description = "zo-bridge — an MCP server bridging Zotero and Obsidian into one AI-assisted workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wuruiqi" }]
keywords = [
    "mcp", "zotero", "obsidian", "literature", "academic",
    "research", "workflow", "annotation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wuruiqi/zo-bridge"
Repository = "https://github.com/wuruiqi/zo-bridge"
Issues = "https://github.com/wuruiqi/zo-bridge/issues"

[project.scripts]
zo-bridge = "server:main"

[tool.setuptools]
py-modules = ["server"]
packages = ["workflow"]

[tool.pytest.ini_options]
markers = [
    "integration: requires running Zotero and Obsidian, skipped in CI",
]
